--- a/contrib/icu-cmake/CMakeLists.txt
+++ b/contrib/icu-cmake/CMakeLists.txt
@@ -1,4 +1,4 @@
-if (OS_LINUX OR OS_DARWIN OR OS_WINDOWS)
+if (OS_LINUX OR OS_DARWIN)
     option(ENABLE_ICU "Enable ICU" 1)
 else ()
     option(ENABLE_ICU "Enable ICU" 0)
@@ -462,7 +462,7 @@ enable_language(ASM)
 if (ARCH_S390X)
     set(ICUDATA_SOURCE_FILE "${ICUDATA_SOURCE_DIR}/icudt75b_dat.S" )
 else()
-    if (OS_LINUX)
+    if (OS_LINUX OR OS_WINDOWS)
         set(ICUDATA_SOURCE_FILE "${ICUDATA_SOURCE_DIR}/icudt75l_dat.S" )
     elseif (OS_DARWIN)
         if (ARCH_AARCH64)
@@ -483,7 +483,6 @@ if (OS_LINUX OR OS_DARWIN)
     add_definitions(-D_REENTRANT -DU_HAVE_ELF_H=1 -DU_HAVE_STRTOD_L=1 -DU_HAVE_XLOCALE_H=0 -DDEFAULT_ICU_PLUGINS="/dev/null")
 elseif (OS_WINDOWS)
     add_definitions(-D_REENTRANT -DDEFAULT_ICU_PLUGINS="/dev/null")
-
 endif()
 
 add_library(_icuuc ${ICUUC_SOURCES})
