--- a/contrib/nanodbc-cmake/CMakeLists.txt
+++ b/contrib/nanodbc-cmake/CMakeLists.txt
@@ -1,5 +1,4 @@
-
-if (OS_DARWIN OR OS_LINIX)
+if (OS_DARWIN OR OS_LINUX)
     if (NOT TARGET ch_contrib::unixodbc)
         message(FATAL_ERROR "Configuration error: unixodbc is not a target")
     endif()
@@ -14,6 +13,7 @@ if (OS_DARWIN OR OS_LINIX)
     target_link_libraries(_nanodbc PUBLIC ch_contrib::unixodbc)
     target_include_directories(_nanodbc SYSTEM PUBLIC "${LIBRARY_DIR}/")
     add_library(ch_contrib::nanodbc ALIAS _nanodbc)
+
 elseif (OS_WINDOWS)
     set (LIBRARY_DIR "${CMAKE_SOURCE_DIR}/contrib/nanodbc")
     set (SRCS
@@ -24,5 +24,4 @@ elseif (OS_WINDOWS)
     target_link_libraries(_nanodbc PUBLIC ODBC::Driver)
     target_include_directories(_nanodbc SYSTEM PUBLIC "${LIBRARY_DIR}/")
     add_library(ch_contrib::nanodbc ALIAS _nanodbc)
-
 endif()
