--- a/driver/platform/win/resource.rc
+++ b/driver/platform/win/resource.rc
@@ -134,11 +134,11 @@ BEGIN
         BLOCK "040904b0"
         BEGIN
             VALUE "Comments", ""
-            VALUE "CompanyName", "Yandex"
+            VALUE "CompanyName", "ClickHouse, Inc."
             VALUE "FileDescription", "ClickHouse ODBC driver"
             VALUE "FileVersion", VERSION_STRING
             VALUE "InternalName", "clickhouse-odbc"
-            VALUE "LegalCopyright", "(c) 2017-2018"
+            VALUE "LegalCopyright", "(c) 2017-2024"
             VALUE "LegalTrademarks", ""
             VALUE "OriginalFilename", ""
             VALUE "PrivateBuild", VERSION_EXTRA
