--- a/packaging/debian/control
+++ b/packaging/debian/control
@@ -1,9 +1,9 @@
 Source: clickhouse-odbc
 Priority: optional
-Maintainer: Alexey Milovidov <milovidov@yandex-team.ru>
+Maintainer: Alexey Milovidov <milovidov@clickhouse.com>
 Build-Depends: debhelper (>= 9), cmake3 | cmake, lsb-release, unixodbc-dev | libiodbc2-dev
 Standards-Version: 4.1.1
-Homepage: https://clickhouse.yandex
+Homepage: https://clickhouse.com/
 
 Package: clickhouse-odbc
 Section: database
