--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -2,6 +2,8 @@ services:
     clickhouse:
         image: 'clickhouse/clickhouse-server:${CLICKHOUSE_VERSION-24.3-alpine}'
         container_name: 'clickhouse-odbc-clickhouse-server'
+        environment:
+            CLICKHOUSE_SKIP_USER_SETUP: 1
         ports:
             - '8123:8123'
             - '9000:9000'
