--- a/.github/workflows/Windows.yml
+++ b/.github/workflows/Windows.yml
@@ -78,7 +78,7 @@ jobs:
         -DODBC_PROVIDER=${{ matrix.odbc_provider }}
         -DCH_ODBC_RUNTIME_LINK_STATIC=${{ fromJSON('{"static-runtime": "ON", "dynamic-runtime": "OFF"}')[matrix.runtime_link] }}
         -DCH_ODBC_PREFER_BUNDLED_THIRD_PARTIES=${{ fromJSON('{"bundled-third-parties": "ON", "system-third-parties": "OFF"}')[matrix.third_parties] }}
-        -DTEST_DSN_LIST="ClickHouse DSN (ANSI);ClickHouse DSN (Unicode);ClickHouse DSN (ANSI, RBWNAT)"
+        -DTEST_DSN_LIST="ClickHouse DSN (ANSI);ClickHouse DSN (Unicode)"
 
     - name: Build
       run: cmake --build ${{ github.workspace }}/build --config ${{ matrix.build_type }}
@@ -156,7 +156,6 @@ jobs:
     #     [ODBC Data Sources]
     #     ClickHouse DSN (ANSI)         = ClickHouse ODBC Driver (ANSI)
     #     ClickHouse DSN (Unicode)      = ClickHouse ODBC Driver (Unicode)
-    #     ClickHouse DSN (ANSI, RBWNAT) = ClickHouse ODBC Driver (ANSI)
 
     #     [ClickHouse DSN (ANSI)]
     #     Driver        = ClickHouse ODBC Driver (ANSI)
@@ -171,13 +170,6 @@ jobs:
     #     Url           = http://${CLICKHOUSE_SERVER_IP}
     #     DriverLog     = yes
     #     DriverLogFile = ${{ github.workspace }}/run/clickhouse-odbc-driver-w.log
-
-    #     [ClickHouse DSN (ANSI, RBWNAT)]
-    #     Driver        = ClickHouse ODBC Driver (ANSI)
-    #     Description   = Test DSN for ClickHouse ODBC Driver (ANSI) that uses RowBinaryWithNamesAndTypes as data source communication default format
-    #     Url           = http://${CLICKHOUSE_SERVER_IP}/query?default_format=RowBinaryWithNamesAndTypes
-    #     DriverLog     = yes
-    #     DriverLogFile = ${{ github.workspace }}/run/clickhouse-odbc-driver.log
     #     EOF
 
     #     if [[ "${{ matrix.odbc_provider }}" == "iODBC" ]]; then
