--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
     clickhouse:
-        image: 'clickhouse/clickhouse-server:${CLICKHOUSE_VERSION-24.3-alpine}'
+        image: 'docker.io/clickhouse/clickhouse-server:${CLICKHOUSE_VERSION-24.3-alpine}'
         container_name: 'clickhouse-odbc-clickhouse-server'
         environment:
             CLICKHOUSE_SKIP_USER_SETUP: 1
@@ -12,8 +12,8 @@ services:
                 soft: 262144
                 hard: 262144
         volumes:
-            - './docker-compose/config.xml:/etc/clickhouse-server/config.xml'
-            - './docker-compose/users.xml:/etc/clickhouse-server/users.xml'
+            - './docker-compose/config.xml:/etc/clickhouse-server/config.xml:z'
+            - './docker-compose/users.xml:/etc/clickhouse-server/users.xml:z'
         networks:
             - clickhouse-odbc
 
