Add sanitizer (ASan, MSan, UBSan)

--- a/driver/CMakeLists.txt
+++ b/driver/CMakeLists.txt
@@ -223,14 +223,16 @@ set_target_properties (${libname} PROPERTIES
     OUTPUT_NAME "clickhouseodbc${WIDECHAR_SUFFIX}"
 )
 
-if (OS_LINUX)
-    set_target_properties(${libname} PROPERTIES
-        LINK_FLAGS "-Wl,--version-script=${CMAKE_CURRENT_SOURCE_DIR}/exported_symbols_linux.txt"
-    )
-elseif (OS_DARWIN)
-    #set_target_properties(${libname} PROPERTIES
-    #    LINK_FLAGS "-Wl,-exported_symbols_list,${CMAKE_CURRENT_SOURCE_DIR}/exported_symbols_darwin.txt"
-    #)
+if (NOT SANITIZE)
+    if (OS_LINUX)
+        set_target_properties(${libname} PROPERTIES
+            LINK_FLAGS "-Wl,--version-script=${CMAKE_CURRENT_SOURCE_DIR}/exported_symbols_linux.txt"
+        )
+    elseif (OS_DARWIN)
+        #set_target_properties(${libname} PROPERTIES
+        #    LINK_FLAGS "-Wl,-exported_symbols_list,${CMAKE_CURRENT_SOURCE_DIR}/exported_symbols_darwin.txt"
+        #)
+    endif()
 endif()
 
 
