Add integration tests for SQLSpecialColumns and SQLStatistics functions

--- a/driver/test/CMakeLists.txt
+++ b/driver/test/CMakeLists.txt
@@ -87,6 +87,7 @@ function (declare_odbc_test_targets libname UNICODE)
         performance_it.cpp
         type_info_it.cpp
         authentication_it.cpp
+        catalog_functions_it.cpp
     )
 
     if (CH_ODBC_ENABLE_CODE_COVERAGE)
