Add ClientName parameter that is passed in the User-Agent header

--- a/packaging/odbc.ini.sample
+++ b/packaging/odbc.ini.sample
@@ -38,6 +38,8 @@ Description = DSN (localhost) for ClickHouse ODBC Driver (ANSI)
 
 # AutoSessionId =  off
 
+# ClientName =
+
 [ClickHouse DSN (Unicode)]
 Driver      = ClickHouse ODBC Driver (Unicode)
 Description = DSN (localhost) for ClickHouse ODBC Driver (Unicode)
