Fix Windows build

--- a/contrib/poco/CMakeLists.txt
+++ b/contrib/poco/CMakeLists.txt
@@ -9,5 +9,5 @@ if (OS_LINUX OR OS_DARWIN)
     add_library(Poco::Net::SSL ALIAS NetSSL)
 else()
     add_subdirectory(NetSSL_Win)
-    add_library(Poco::Net::SSL ALIAS NetSSLWin)
+    add_library(Poco::Net::WinSSL ALIAS NetSSLWin)
 endif()
