--- a/contrib/poco/NetSSL_Win/CMakeLists.txt
+++ b/contrib/poco/NetSSL_Win/CMakeLists.txt
@@ -7,6 +7,7 @@ file(GLOB_RECURSE HDRS_G "include/*.h")
 POCO_HEADERS_AUTO(SRCS ${HDRS_G})
 
 add_library(NetSSLWin ${SRCS})
+set_target_properties(NetSSLWin PROPERTIES CXX_STANDARD 17)
 add_library(Poco::NetSSLWin ALIAS NetSSLWin)
 
 target_link_libraries(NetSSLWin PUBLIC Poco::Net Poco::Util Crypt32.lib)
