Add extra DSNs to the tests with compression enabled

--- a/.github/workflows/Coverage.yml
+++ b/.github/workflows/Coverage.yml
@@ -75,7 +75,7 @@ jobs:
         -D CMAKE_POLICY_VERSION_MINIMUM=3.5
         -D CMAKE_BUILD_TYPE=Debug
         -D ODBC_PROVIDER=UnixODBC
-        -D TEST_DSN_LIST="ClickHouse DSN (ANSI);ClickHouse DSN (Unicode)"
+        -D TEST_DSN_LIST="ClickHouse DSN (ANSI);ClickHouse DSN (Unicode);ClickHouse DSN (ANSI) ZSTD;ClickHouse DSN (Unicode) ZSTD"
         -D CH_ODBC_ENABLE_CODE_COVERAGE=ON
         -D BUILD_TESTING=YES
 
@@ -132,6 +132,22 @@ jobs:
         Url           = http://localhost:8123
         DriverLog     = yes
         DriverLogFile = ${{ github.workspace }}/run/clickhouse-odbc-driver-w.log
+
+        [ClickHouse DSN (ANSI) ZSTD]
+        Driver        = ClickHouse ODBC Driver (ANSI)
+        Description   = Test DSN for ClickHouse ODBC Driver (ANSI)
+        Url           = http://${CLICKHOUSE_SERVER_IP}
+        DriverLog     = yes
+        DriverLogFile = ${{ github.workspace }}/run/clickhouse-odbc-driver.log
+        Compression   = 1
+
+        [ClickHouse DSN (Unicode) ZSTD]
+        Driver        = ClickHouse ODBC Driver (Unicode)
+        Description   = Test DSN for ClickHouse ODBC Driver (Unicode)
+        Url           = http://localhost:8123
+        DriverLog     = yes
+        DriverLogFile = ${{ github.workspace }}/run/clickhouse-odbc-driver-w.log
+        Compression   = 1
         EOF
 
     - name: Test - Run C++ unit tests
