--- a/contrib/zstd-cmake/CMakeLists.txt
+++ b/contrib/zstd-cmake/CMakeLists.txt
@@ -1,9 +1,9 @@
+set(ZSTD_BUILD_SHARED   OFF CACHE BOOL "" FORCE)
+set(ZSTD_BUILD_STATIC   ON  CACHE BOOL "" FORCE)
 set(ZSTD_BUILD_PROGRAMS OFF CACHE BOOL "" FORCE)
-set(ZLIB_BUILD_TESTING OFF CACHE BOOL "" FORCE)
-set(ZLIB_BUILD_SHARED  OFF CACHE BOOL "" FORCE)
-set(ZLIB_BUILD_STATIC  ON  CACHE BOOL "" FORCE)
-set(ZLIB_BUILD_MINIZIP OFF CACHE BOOL "" FORCE)
-set(ZLIB_INSTALL       OFF CACHE BOOL "" FORCE)
-set(ZLIB_PREFIX        OFF CACHE BOOL "" FORCE)
 
+get_directory_property(SAVED_LINK_LIBS LINK_LIBRARIES)
+set_property(DIRECTORY PROPERTY LINK_LIBRARIES "")
 add_subdirectory(../zstd/build/cmake ${CMAKE_CURRENT_BINARY_DIR}/contrib/zstd/)
+set_property(DIRECTORY PROPERTY LINK_LIBRARIES ${SAVED_LINK_LIBS})
+add_library (ch_contrib::zstd ALIAS libzstd_static)
