--- a/.github/workflows/Linux.yml
+++ b/.github/workflows/Linux.yml
@@ -195,10 +195,12 @@ jobs:
     # Run all tests except those that were run in "Test - unit tests" step.
     - name: Test - Run C++ integration tests
       working-directory: ${{ github.workspace }}/build
+      env:
+        DSN: "ClickHouse DSN (ANSI)"
+        ODBCSYSINI: ""  # Must be set for `ODBCINSTINI` and `ODBCINI` to work
+        ODBCINSTINI: ${{ github.workspace }}/run/.odbcinst.ini
+        ODBCINI: ${{ github.workspace }}/run/.odbc.ini
       run: |
-        export ODBCSYSINI=
-        export ODBCINSTINI="${{ github.workspace }}/run/.odbcinst.ini"
-        export ODBCINI="${{ github.workspace }}/run/.odbc.ini"
         if [[ "${{ matrix.odbc_provider }}" == "iODBC" ]]; then
           export GTEST_FILTER="-PerformanceTest.*"
         fi
